# libhifive

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RISCVToolchain.cmake  buildsdk.py  hifive.default.lds  template.h  template_csr.h
definitions/: aon.xml  csr.xml  gpio.xml  i2c.xml  prci.xml  pwm.xml  spi.xml  uart.xml
device_extra/: csr.h  gpio.h  uart.h
example/fade/: CMakeLists.txt  fade.c
example/helloworld/: CMakeLists.txt  helloworld.c
extra/: Doxyfile  RISCVToolchain.cmake
extra/example/fade/: CMakeLists.txt  fade.c
extra/example/helloworld/: CMakeLists.txt  helloworld.c
extra/example/minimal/: CMakeLists.txt
extra/include/hifive/: interrupt.h  util.h
extra/src/: bootstrap.s  system.c
include/: clocks.h  gpio.h  hifive-common.h  pwm.h  sleep.h  uart.h
src/: bootstrap.s  clocks.c  gpio.c  sleep.s  system.c  uart.c
